@@ -3,5 +3,5 @@ package pl.asie.endernet.api;
 import pl.asie.endernet.lib.EnderServer;
 
 public interface IEnderStringReceiver {
-	public boolean receiveString(EnderServer server, String string);
+	public boolean receiveString(EnderServer server, String string, String endpoint);
 }
